// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: FallbackList > renders fallback list with route data 1`] = `
<div>
  <div
    class="flex-1 overflow-auto p-4"
  >
    <ol
      class="flex flex-col gap-2"
    >
      <li
        class="flex items-center gap-2 text-sm text-foreground"
      >
        <span
          class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full bg-primary text-xs font-bold text-primary-fg"
        >
          1
        </span>
        <span
          class="truncate"
        >
          宇治站
        </span>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Snapshot: GeneralAnswer > renders QA data 1`] = `
<div>
  <div
    class="py-2"
  >
    <p
      class="max-w-[65ch] text-sm font-light leading-loose text-foreground"
    >
      テスト回答です。
    </p>
  </div>
</div>
`;

exports[`Snapshot: NearbyBubble > renders nearby bubble 1`] = `
<div>
  <div>
    <p
      class="text-sm font-light leading-loose text-foreground"
    >
      半径 1km 以内に 1 作品の 1 か所の聖地が見つかりました
    </p>
    <div
      class="mt-3 flex flex-col gap-2"
    >
      <button
        class="animal-btn animal-btn-dashed animal-btn-middle w-full justify-start gap-4 px-5 py-4 font-normal hover:-translate-y-0.5 hover:shadow-sm active:translate-y-0 transition-all duration-150 ease-[var(--ease-animal)]"
        type="button"
      >
        <span>
          <span
            aria-hidden="true"
            class="h-2.5 w-2.5 shrink-0 rounded-full"
            style="background-color: oklch(0.55 0.148 240);"
          />
          <img
            alt=""
            class="h-10 w-12 shrink-0 rounded-sm object-cover bg-muted"
            src="https://example.com/img.jpg"
          />
          <span
            class="flex min-w-0 flex-1 flex-col gap-1 text-left"
          >
            <span
              class="truncate text-sm text-foreground font-display"
            >
              響け！ユーフォニアム
            </span>
            <span
              class="text-xs text-muted-foreground"
            >
              1 聖地 · 最寄り 0m
            </span>
          </span>
          <span
            aria-hidden="true"
            class="shrink-0 text-base text-primary"
          >
            →
          </span>
        </span>
      </button>
    </div>
    <button
      class="animal-btn animal-btn-default animal-btn-middle mt-3 w-full justify-start gap-4 px-5 py-4 font-normal"
      type="button"
    >
      <span>
        <span
          class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full bg-primary text-xs text-primary-foreground"
        >
          <svg
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-width="2.5"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M5 12h14M12 5l7 7-7 7"
            />
          </svg>
        </span>
        <span
          class="flex-1 text-left text-sm text-foreground"
        >
          全 1 聖地を表示
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          →
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Snapshot: NearbyBubbleWrapper > renders with search data 1`] = `
<div>
  <div
    class="max-w-[480px] rounded-2xl rounded-bl bg-card px-4 py-3"
  >
    <div>
      <p
        class="text-sm font-light leading-loose text-foreground"
      >
        半径 1km 以内に 1 作品の 1 か所の聖地が見つかりました
      </p>
      <div
        class="mt-3 flex flex-col gap-2"
      >
        <button
          class="animal-btn animal-btn-dashed animal-btn-middle w-full justify-start gap-4 px-5 py-4 font-normal hover:-translate-y-0.5 hover:shadow-sm active:translate-y-0 transition-all duration-150 ease-[var(--ease-animal)]"
          type="button"
        >
          <span>
            <span
              aria-hidden="true"
              class="h-2.5 w-2.5 shrink-0 rounded-full"
              style="background-color: oklch(0.55 0.148 240);"
            />
            <img
              alt=""
              class="h-10 w-12 shrink-0 rounded-sm object-cover bg-muted"
              src="https://example.com/img.jpg"
            />
            <span
              class="flex min-w-0 flex-1 flex-col gap-1 text-left"
            >
              <span
                class="truncate text-sm text-foreground font-display"
              >
                響け！ユーフォニアム
              </span>
              <span
                class="text-xs text-muted-foreground"
              >
                1 聖地 · 最寄り 0m
              </span>
            </span>
            <span
              aria-hidden="true"
              class="shrink-0 text-base text-primary"
            >
              →
            </span>
          </span>
        </button>
      </div>
      <button
        class="animal-btn animal-btn-default animal-btn-middle mt-3 w-full justify-start gap-4 px-5 py-4 font-normal"
        type="button"
      >
        <span>
          <span
            class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full bg-primary text-xs text-primary-foreground"
          >
            <svg
              fill="none"
              height="12"
              stroke="currentColor"
              stroke-width="2.5"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="M5 12h14M12 5l7 7-7 7"
              />
            </svg>
          </span>
          <span
            class="flex-1 text-left text-sm text-foreground"
          >
            全 1 聖地を表示
          </span>
          <span
            class="text-sm text-muted-foreground"
          >
            →
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshot: PhotoCard > renders photo card 1`] = `
<div>
  <button
    aria-pressed="false"
    class="group relative cursor-pointer overflow-hidden rounded-lg border-2 bg-card text-left transition-all duration-200 hover:-translate-y-0.5 hover:shadow-lg border-border"
    type="button"
  >
    <button
      aria-label="查看详情"
      class="animal-btn animal-btn-default animal-btn-small animal-btn-ghost animal-btn-icon-only absolute left-2 top-2 z-10 rounded-full bg-background text-muted-foreground opacity-0 shadow-sm transition-opacity group-hover:opacity-100"
      type="button"
    >
      <span>
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="8"
            y2="8"
          />
        </svg>
      </span>
    </button>
    <div
      class="relative aspect-[16/10] overflow-hidden"
    >
      <img
        alt="宇治駅"
        class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-[1.04]"
        height="200"
        src="https://example.com/img.jpg"
        width="320"
      />
      <span
        class="absolute left-2 top-2 rounded-[5px] bg-foreground/55 px-2 py-0.5 text-xs font-semibold tracking-wide text-background backdrop-blur-[4px]"
      >
        第1話
      </span>
    </div>
    <div
      class="px-3 py-2.5"
    >
      <p
        class="truncate text-sm font-medium text-foreground"
      >
        宇治駅
      </p>
      <p
        class="mt-0.5 truncate text-xs text-muted-foreground"
      >
        響け！ユーフォニアム
      </p>
    </div>
  </button>
</div>
`;

exports[`Snapshot: ResultAnchor > renders anchor button 1`] = `
<div>
  <button
    class="animal-btn animal-btn-default animal-btn-middle group/anchor h-auto w-full max-w-[320px] gap-3 rounded-xl p-4 text-left shadow-[var(--shadow-card)] transition-all duration-200 ease-[var(--ease-animal)] hover:-translate-y-1 hover:shadow-[var(--shadow-card-hover)]"
    type="button"
  >
    <span>
      <span
        class="flex h-9 w-9 shrink-0 items-center justify-center rounded-lg bg-primary/10"
      >
        <svg
          class="h-4 w-4 text-primary"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 1.5A4.5 4.5 0 0 0 3.5 6c0 3.5 4.5 8.5 4.5 8.5s4.5-5 4.5-8.5A4.5 4.5 0 0 0 8 1.5Z"
          />
          <circle
            cx="8"
            cy="6"
            r="1.5"
          />
        </svg>
      </span>
      <span
        class="flex min-w-0 flex-1 flex-col gap-0.5"
      >
        <span
          class="truncate text-xs font-medium text-foreground"
        >
          3件の結果
        </span>
        <span
          class="text-xs text-muted-foreground"
        >
          タップして表示
        </span>
      </span>
      <span
        class="shrink-0 text-sm text-muted-foreground transition-transform duration-150 group-hover/anchor:translate-x-0.5"
      >
        ›
      </span>
    </span>
  </button>
</div>
`;

exports[`Snapshot: SpotDetail > renders spot detail page 1`] = `
<div>
  <div
    class="flex h-full min-h-0 flex-1 overflow-hidden"
  >
    <div
      class="flex w-[55%] shrink-0 flex-col overflow-y-auto p-5"
    >
      <button
        class="animal-btn animal-btn-link animal-btn-small mb-3"
        type="button"
      >
        <span>
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
          >
            <polyline
              points="15 18 9 12 15 6"
            />
          </svg>
          戻る
        </span>
      </button>
      <div
        class="w-full overflow-hidden rounded-lg aspect-[4/3]"
      >
        <img
          alt="宇治駅"
          class="h-full w-full object-cover"
          height="300"
          src="https://example.com/img.jpg"
          width="400"
        />
      </div>
      <h2
        class="mt-3 font-display text-lg font-bold leading-tight text-foreground"
      >
        宇治站
      </h2>
      <p
        class="mt-1 text-sm text-muted-foreground"
      >
        吹响！上低音号
         · 第1話
      </p>
      <p
        class="mt-1 text-xs tabular-nums text-muted-foreground"
      >
        📸 スクリーンショット時刻:
         
        01:25
      </p>
      <div
        class="mt-5 flex flex-wrap gap-3"
      >
        <button
          class="animal-btn animal-btn-primary animal-btn-middle"
          type="button"
        >
          <span>
            聖地を選択
          </span>
        </button>
        <a
          href="https://www.google.com/maps?q=34.88,135.8"
          rel="noopener noreferrer"
          target="_blank"
        >
          <button
            class="animal-btn animal-btn-default animal-btn-middle"
            type="button"
          >
            <span>
              マップで見る
            </span>
          </button>
        </a>
      </div>
    </div>
    <div
      class="flex w-[45%] flex-col gap-4 overflow-y-auto border-l border-border p-5"
    >
      <div
        class="w-full overflow-hidden rounded-lg h-[280px]"
      >
        <div
          data-testid="dynamic-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
